--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,64 @@
 @import url(sanitize.css);
+
+body{
+    background-color: #f0f0f0;
+    padding: 10px;
+    font-size: 14px;
+    color: #666;
+}
+
+header{
+ background-color: #422814;
+ padding: 14px;
+ color: #fff;
+
+}
+
+header h1{
+    margin: 0;
+    font-size: 24px;
+    font-weight: normal;
+    text-align: center;
+}
+
+div.container{
+    width: 800px;
+    margin: 0 auto;
+    box-shadow: 0 0 10px rgba(0,0,0,.3);
+}
+
+.description img{
+    float: left;
+    /* 画像を浮かせるというイメージ まさに回り込ませる*/
+    margin: 0 10px 10px 0;
+    /* 時計回りに余白をとる */
+}
+
+.type{
+    background-color: #e35a4d;
+    padding: 2px 3px;
+    color: #fff;
+    font-size: .6em;
+}
+
+.information{
+    display: flex;
+    align-items: center;
+    /* 高さを中央ぞろえにするよ、floatだとめんどくさい */
+}
+
+.information h1{
+    font-size: 18px;
+    margin: 0 10px 0 0;
+}
+
+.songs{
+    clear: both;
+    /* 回り込みを解除 */
+}
+
+a{
+    color: #666;
+    text-decoration: none;　
+    /* 下線を消す */
+}
